

                 SCons - a software construction tool

                            Change Log


RELEASE 2.1.0.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE

  From Gary Oberbrunner:

    - New systemwide and per-user site_scons dirs.

  From Dirk Baechle:

    - XML fixes in User's Guide.

  From Joe Zuntz:

    - Fixed a case-sensitivity problem with Fortran modules.

  From Bauke Conijn:

    - Added Users Guide example for auto-generated source code

  From Steven Knight:

    - Fix explicit dependencies (Depends()) on Nodes that don't have
      attached Builders.

  From Matt Hughes:

    - Fix the ability to append to default $*FLAGS values (which are
      implemented as CLVar instances) in a copied construction environment
      without affecting the original construction environment's value.

  From Rob Managan:

    - Updated the TeX command strings to include a /D on Windows in
      case the new directory is on a different drive letter.

    - Fixed the LaTeX scanner so dependencies are found in commands that
      are broken across lines with a comment or have embedded spaces.

RELEASE 2.0.0.beta.20100605 - Sat, 05 Jun 2010 21:02:48 -0700

  From Dirk Baechle:

    - Fix XML in documentation.

  From W. Trevor King:

    - Revisions to README.

  From Steven Knight:

    - Provide forward compatibility for the 'profile' module.

    - Provide forward compatibility for the 'pickle' module.

    - Provide forward compatibility for the 'io' module.

    - Provide forward compatibility for the 'queue' module.

    - Provide forward compatibility for the 'collections' module.

    - Provide forward compatibility for the 'builtins' module.

    - Provide forward compatibility for 'sys.intern()'.

    - Convert to os.walk() from of os.path.walk().

    - Remove compatibility logic no longer needed.

    - Add a '-3' option to runtest to print 3.x incompatibility warnings.

    - Convert old-style classes into new-style classes.
